--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,20 +4,40 @@
 #   pre-commit autoupdate
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.0.1
+    rev: v3.2.0
     hooks:
-    -   id: check-added-large-files
+    -   id: check-ast
+    -   id: check-byte-order-marker
     -   id: check-case-conflict
+    -   id: check-docstring-first
     -   id: check-executables-have-shebangs
     -   id: check-json
-    -   id: check-merge-conflict
-    -   id: check-shebang-scripts-are-executable
-    -   id: check-symlinks
-    -   id: check-vcs-permalinks
     -   id: check-yaml
-    -   id: destroyed-symlinks
+    -   id: debug-statements
     -   id: detect-private-key
     -   id: end-of-file-fixer
-        exclude: _data/comedians.json
     -   id: trailing-whitespace
     -   id: mixed-line-ending
+-   repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.782
+    hooks:
+    -   id: mypy
+        args: [--ignore-missing-imports]
+-   repo: https://github.com/pre-commit/mirrors-isort
+    rev: v5.4.2
+    hooks:
+    -   id: isort
+-   repo: https://github.com/psf/black
+    rev: 20.8b1
+    hooks:
+    -   id: black
+-   repo: https://github.com/asottile/pyupgrade
+    rev: v2.7.2
+    hooks:
+    -   id: pyupgrade
+        args: [--py36-plus]
+-   repo: https://github.com/asottile/blacken-docs
+    rev: v1.8.0
+    hooks:
+    -   id: blacken-docs
+        additional_dependencies: [black==20.8b1]
