--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Ming's Homepage
 ga_id: G-25SSLLWDWK
-icon: https://i.imgur.com/5sf5UArs.png
+icon: https://en.gravatar.com/userimage/123912548/83e8abbadb1db4712048c31b1fafa1df.png
