--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,9 @@ beautifulsoup4==4.10.0
 bibtexparser==1.2.0
 certifi==2021.5.30
 charset-normalizer==2.0.4
+colorama==0.4.4
+configparser==5.0.2
+crayons==0.4.0
 docutils==0.16
 fake-useragent==0.1.11
 free-proxy==1.0.3
@@ -39,3 +42,4 @@ sphinxcontrib-serializinghtml==1.1.5
 stem==1.8.0
 typing-extensions==3.10.0.2
 urllib3==1.26.6
+webdriver-manager==3.4.2
