--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,6 +23,7 @@ repos:
     hooks:
     -   id: mypy
         args: [--ignore-missing-imports]
+        additional_dependencies: [types-requests, types-PyYAML]
 -   repo: https://github.com/PyCQA/isort
     rev: 5.10.1
     hooks:
