--- a/_data/metrics.yaml
+++ b/_data/metrics.yaml
@@ -1,3 +1,4 @@
-github_followers: 57
+github_followers: 58
 hindex: 3
-updated: 2022-01-17 21:10:27.663787
+medium_followers: 101
+updated: 2022-01-22 10:51:37.370388
