--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,7 @@
 #   pre-commit autoupdate
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.3.0
+    rev: v4.6.0
     hooks:
     -   id: check-ast
     -   id: check-byte-order-marker
@@ -19,26 +19,26 @@ repos:
     -   id: trailing-whitespace
     -   id: mixed-line-ending
 -   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.971
+    rev: v1.11.2
     hooks:
     -   id: mypy
         args: [--ignore-missing-imports]
         additional_dependencies: [types-requests, types-PyYAML]
 -   repo: https://github.com/PyCQA/isort
-    rev: 5.10.1
+    rev: 5.13.2
     hooks:
     -   id: isort
 -   repo: https://github.com/psf/black
-    rev: 22.8.0
+    rev: 24.8.0
     hooks:
     -   id: black
 -   repo: https://github.com/asottile/pyupgrade
-    rev: v2.37.3
+    rev: v3.17.0
     hooks:
     -   id: pyupgrade
         args: [--py36-plus]
 -   repo: https://github.com/asottile/blacken-docs
-    rev: v1.12.1
+    rev: 1.18.0
     hooks:
     -   id: blacken-docs
-        additional_dependencies: [black==20.8b1]
+        additional_dependencies: [black~=22.1]
